--- a/styles.css
+++ b/styles.css
@@ -253,3 +253,10 @@ header h1 {
 #settingsForm button:hover {
     background: linear-gradient(90deg, var(--pastel-blue), var(--pastel-purple));
 }
+
+#gotoPomodoroBtn{
+     border-radius: 1.2rem;
+     color: #a0c4ff;
+     background-color: #5f5f7a;
+}
+
